# SAGA_COM-304

./: .gitignore  README.md  demo.ipynb  downloadvideo.ipynb  pyproject.toml  requirements.txt  rgb2_depth_normal.py  run_training.py  setup.md  submit_job_multi_node_scitas.sh
.github/: ISSUE_TEMPLATE
.github/ISSUE_TEMPLATE/: task-template.md
SAGA_submission/: README.md  pyproject.toml  requirements.txt  submit_job_multi_node_scitas.sh
cfgs/: test_single_gpu.yaml
cfgs/label2audio/1_dataset/: dataset_creator.ipynb  label2audio_2025-05-25_14-49.csv  label2audio_2025-05-25_14-49.txt  select_tokens.py
cfgs/label2audio/2_train/: label2audio_2025-05-25_14-49.yaml
cfgs/nano4M/: SAGAnano4M.yaml  SAGAnano4M_audio.yaml  SAGAnano4M_depth.yaml  SAGAnano4M_reduce_max.yaml  multiclevr_d6-6w512.yaml
data_set_try1/: 01_notebook.ipynb  label_counts.csv  notebook.ipynb  vggsound_explorer.py
data_set_try1/dataset/: data_loader.py
dataset_module/notebooks/: downloadvideo.ipynb  make_equal_label_dataset.py  play_with_data.ipynb  traintesteval.py
dataset_module/src/: image_tokenizer.ipynb  main.py
dataset_module/temp/: REQUIREMENTS.md
latex-proposal-template/: main.tex
nanofm/data/: test_utils.py  tokenizers.py  utils.py
nanofm/modeling/: transformer_layers.py
nanofm/models/: fourm.py
notebooks/: Tokenizers.ipynb  tokenizer.ipynb
progress_reports/latex-final-report-template/: main.tex
progress_reports/latex-progress-update-template/: main.tex  references.bib
progress_reports/latex-proposal-template/: ebaucheGPT.tex  references.bib
(+97 files in other folders)
